--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "precommit": "lint-staged",
     "prepublish": "npm run build",
     "lint-staged": "lint-staged",
-    "dev": "cross-env BABEL_ENV=cjs babel-node example/startServer.js",
-    "postinstall": "opencollective postinstall || exit 0"
+    "dev": "cross-env BABEL_ENV=cjs babel-node example/startServer.js"
   },
   "repository": {
     "type": "git",
@@ -73,7 +72,6 @@
     "fbjs": "^0.8.9",
     "hoist-non-react-statics": "^2.5.0",
     "is-plain-object": "^2.0.1",
-    "opencollective": "^1.0.3",
     "prop-types": "^15.5.4",
     "stylis": "^3.5.0",
     "stylis-rule-sheet": "^0.0.10",
